# beni

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  mypy.ini  pyproject.toml
.github/workflows/: pythonpackage.yml
beni/: __init__.py
tests/: test_mapping.py  test_run.py
